Enhance specification generation
[REFACTOR] Use exerciseTopic enum on client
[MODIFY] Enhance exercise specification interface
[MODIFY] Re-use NLP pipeline of ranking for exercise generation